infra/istio/overlays/student-profile/authorizationpolicy-student-profile-allow-identity.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: student-profile-allow-identity
  namespace: sis
spec:
  selector:
    matchLabels:
      app: student-profile
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sis/sa/identity-sa"]
